@@ -69,9 +69,8 @@ metaocamlmktop: metaocamlmktop.tpl metaocaml
 clean::
 	rm -f metaocamlmktop
 
-metaocamlc: metaocamlc.tpl metaocaml
-	sed -e 's|%%BINDIR%%|$(BINDIR)|' metaocamlc.tpl > metaocamlc
-	chmod +x metaocamlc
+metaocamlc: metaocamlc.c
+	$(CC) -Wall -DBINDIR=\"$(BINDIR)\" -o metaocamlc metaocamlc.c
 
 clean::
 	rm -f metaocamlc
@@ -97,14 +96,14 @@ test:
 #	cd gprint && $(MAKE) CAMLROOT=../$(CAMLROOT) vgprint_top
 
 test-compile:
-	$(BINDIR)/metaocamlc -o simple_true test/simple_true.ml
+	$(BINDIR)/metaocamlc -w -8 -o simple_true test/simple_true.ml
 	./simple_true
 # 	$(BINDIR)/metaocamlc -o quick_test test/quick_test.ml
 # 	./quick_test
 	$(BINDIR)/metaocamlc -dparsetree -drawlambda -dinstr -c test/test21.ml
 	$(BINDIR)/metaocamlc -c test/t4types.mli && \
 	cp test/t4types.cmi . # .cmi file should be where the executable is
-	$(BINDIR)/metaocamlc -o t4 -I test/ test/t4.ml
+	$(BINDIR)/metaocamlc -w -8 -o t4 -I test/ test/t4.ml
 	./t4
 	$(BINDIR)/metaocamlc -o pt test/pythagorian_triples.ml
 	./pt
